# grokfx

./: LICENSE  README.md  pyproject.toml
extractor/: cli.py  parser.py  saver.py  utils.py
